Correction in text align

--- a/styles/for_time.css
+++ b/styles/for_time.css
@@ -60,7 +60,7 @@
   font-size: 18px;
   letter-spacing: 1px;
   min-width: 100px;
-  text-align: right;
+  text-align: left;
 }
 
 /* START BUTTON */
